@@ -68,6 +68,46 @@ class RemoteUsaEpayTransactionTest < Test::Unit::TestCase
     assert_success response
   end
 
+  def test_successful_purchase_with_recurring_fields
+    recurring_fields = [
+      add_customer: true,
+      schedule: 'quarterly',
+      bill_source_key: 'bill source key',
+      bill_amount: 123,
+      num_left: 5,
+      start: '20501212',
+      recurring_receipt: true
+    ]
+
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(recurring_fields: recurring_fields))
+    assert_equal 'Success', response.message
+    assert_success response
+  end
+
+  def test_successful_purchase_with_custom_fields
+    custom_fields = {
+      1 => 'multi',
+      2 => 'pass',
+      3 => 'korben',
+      4 => 'dallas'
+    }
+
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(custom_fields: custom_fields))
+    assert_equal 'Success', response.message
+    assert_success response
+  end
+
+  def test_successful_purchase_with_line_items
+    line_items = [
+      {sku:  'abc123', cost: 119, quantity: 1},
+      {sku: 'def456', cost: 200, quantity: 2, name: 'an item' }
+    ]
+
+    assert response = @gateway.purchase(@amount, @credit_card, @options.merge(line_items: line_items))
+    assert_equal 'Success', response.message
+    assert_success response
+  end
+
   def test_unsuccessful_purchase
     # For some reason this will fail with "You have tried this card too
     # many times, please contact merchant" unless a unique order id is
