@@ -8,6 +8,7 @@
 * Stripe: support specifying a reason for refunds [yosukehasumi] #3056
 * TrustCommerce: Add ACH Ability [nfarve] #3073
 * Payeezy: Support $0 for verify transactions [molbrown] #3074
+* USA ePay: add support for recurring transactions, custom fields, and line items [lancecarlson] #3069
 
 == Version 1.88.0 (November 30, 2018)
 * Added ActiveSupport/Rails master support [Edouard-chin] #3065
